--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "marked": "^12.0.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.2.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
